2003-10-19  Per Bothner  <per@bothner.com>

	* TestMisc.java (main): 3 new tests for 'some/every ... satsifies'.
	9 new tests for 'union/intersect/except'.
	(evalNodeNames):  New convenience method.

2003-10-12  Per Bothner  <per@bothner.com>

	* TestMisc.java (eval):  Re-write to use parseFile rather than parse.

	* mod1.xql, mod2.xql, usemod.xql:  Sources for library module test.
	* usemod.exp:  Expected output for new test.
	* Makefile.am:  Rules for new test.

2003-10-08  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add 4 new tests.

	* descend.xql:  Update for revised XQuery syntax.
	* maketab1.xql:  Likewise.

2003-09-18  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Two tests for absolute path expressions.

2003-09-14  Per Bothner  <per@bothner.com>

	* outline.xml.in:  New data file.
	* TestMisc.java:  New tests for new axes.

	* TestMisc,java:  Use doc instead of document.

2003-09-11  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add semi-colons after declarations.
	Update xmlspace declarations.
	* use-cases.xml:  Various updates.

2003-09-10  Per Bothner  <per@bothner.com>

	* TestMisc.java:  New test for 'at' clause in FLWOR.
	Update 'define function' to 'declare function'.

2003-08-03  Per Bothner  <per@bothner.com>

	* report1.xml.in:  New data file.
	* Makefile.am (EXTRA_DIST):  Add report1.xml.in.
	* use-cases.xml:  Add 3 more use cases: SEQ Q1, Q2; R Q4.

	* TestMisc.java (main):  Fix/update some tests.
	Add 4 tests for boundary whitespace and	declare xmlspace.
	* maketab1.xql:  Add a now-needed xmlspace declaration.
	* use-cases.xml:  Add 4 more use cases.
	Update older test cases to match official uses cases.

2003-07-26  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add test for distinct-nodes.

2003-07-23  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Add 3 more tests.

2003-07-10  Per Bothner  <per@bothner.com>

	* TestMisc.java:  New tests based on bugs reported by Francois Leygues