@@ -1,3 +1,7 @@
+2003-10-29  Per Bothner  <per@bothner.com>
+
+	* TestMisc.java:  Update for output of namespace declaration.
+
 2003-10-19  Per Bothner  <per@bothner.com>
 
 	* TestMisc.java (main): 3 new tests for 'some/every ... satsifies'.
